# pos_restaurant

./: .gitignore  .tmp_advisor11.py  AGENTS.md  CLAUDE.md  JIRA_TICKETS_2026.md  PRODUCT_ROADMAP_2026.md  README.md  SPRINT_BOARD_2026.md  build-signed.ps1  check_turso.ps1  detect_enc.py  eslint.config.mjs  fix_encoded_files.py  fix_layout.py  fix_login.py  fix_signing.py  latest-release.json  latest.json  next.config.ts  package.json  pnpm-lock.yaml  private.key  release.bat  release.ps1  release.sh  schema.sql  sign-update.cmd  tsconfig.json
relay/: package.json  (+1 more)
src-tauri/: Cargo.toml  build.rs  signing.key  signing.key.pub  tauri.conf.json  test_db.py  test_loop.py
src-tauri/capabilities/: default.json
src-tauri/migrations/: 010_inventory_recipes.sql
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: analytics.rs  auth.rs  exchange.rs  inventory.rs  kitchen.rs  mod.rs  orders.rs  products.rs  rbac.rs  releases.rs  reports.rs  restaurant.rs  tables.rs
src-tauri/src/db/: mod.rs  sync.rs
src-tauri/src/db/migrations/: 001_baseline.sql  001_initial_schema.sql  002_add_features.sql  003_add_images_and_inventory.sql  004_app_releases.sql  004_restaurant_setup_and_minimal_seed.sql  005_add_restaurant_logo.sql  005_daily_reports.sql  006_products_stock_nullable.sql  006_recalculate_existing_orders.sql  007_kitchen_and_tables.sql  008_customer_info.sql  009_table_sessions_and_rounds.sql  011_ensure_missing_columns.sql  012_restore_depleted_stock.sql  013_fix_missing_session_columns.sql  014_expand_role_check.sql  015_floor_tables_restaurant_id.sql  (+5 more)
(+171 files in other folders)
