[package]
name = "dineos"
version = "0.1.1"
description = "DineOS — Premium Cambodia Business POS System"
authors = ["DineOS Team"]
edition = "2021"

[lib]
name = "dineos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dineos"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Database
libsql = { version = "0.3.4", features = ["core", "replication", "remote", "serde"] }

# Async
tokio = { version = "1", features = ["full"] }

# Security
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
